# tengine_demo

./: README.md
TengineStudy/: settings.gradle
TengineStudy/app/: CMakeLists.txt  build.gradle
TengineStudy/app/src/main/: AndroidManifest.xml
TengineStudy/app/src/main/cpp/include/: ext.h  impl.c  tengine_c_api.h  vector.h
TengineStudy/app/src/main/cpp/src/: GraphParam.cpp  GraphParam.h  JTgwrapper.cpp  demos.h  jni_main.cpp  log.h  main.cpp  openpose.cpp  openpose.h  tgwrapper.cpp  tgwrapper.h  tm_classification.c  tm_classification_fp16.c  tm_classification_uint8.c  tm_landmark.cpp  tm_landmark_uint8.cpp  tm_mobilenet_ssd.c  tm_openpose.cpp  tm_yolact.cpp
TengineStudy/app/src/main/cpp/src/common/: common.c  common.h  tengine_operations.c
TengineStudy/app/src/main/java/com/heaven7/android/tenginestudy/: AssetsUtils.java  GraphParam.java  InferenceQueueManager.java  MainActivity.java  OpenposeCameraAc.java  TengineWrapper.java  TgWrapper.java  Utils.java
TengineStudy/app/src/main/res/layout/: ac_openpose_camera.xml  activity_main.xml
TengineStudy/app/src/main/res/values/: strings.xml
TengineStudy/bak/: build-android.cmd
TengineStudy/gradle/wrapper/: gradle-wrapper.properties
